option('frontend',
    description: 'Build the frontend',
    type: 'boolean',
    value: true)

option('floating-point',
    description: 'Floating point precision',
    type: 'combo',
    choices: ['single', 'double'],
    value: 'double')

option('max-channels',
    description: 'Maximum number of channels',
    type: 'integer',
    min: 1,
    max: 64,
    value: 64)
